<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/md_indigo_A200"
    android:paddingBottom="30dp"
    >
    <TextView
        android:id="@+id/affiche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/infos"
        android:textSize="24dp"
        android:textColor="@android:color/white"
        />
    <RelativeLayout
        android:id="@+id/r2"
        android:layout_width="match_parent"
        android:background="@color/md_indigo_A200"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/oui"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_height="30dp"
            android:textColor="@color/md_blue_50"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/bstyle"
            android:text="@string/button1"/>

        <Button
            android:id="@+id/non"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="30dp"
            android:textColor="@color/md_blue_50"
            android:textSize="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/bstyle"
            android:text="@string/button2"/>
    </RelativeLayout>

</RelativeLayout>
