<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/signelayout"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:background="@color/md_indigo_A200">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signtitle"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"

            style="@style/mode_activated"
            android:textSize="12dp"
            android:ems="2"
            android:gravity="center"
            />
        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:src="@drawable/pindelia_logo"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/signaturelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/r1"
        android:layout_alignParentTop="true"
        >
        <com.github.gcacace.signaturepad.views.SignaturePad
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/signature_pad" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/card_view_tree"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/r2"
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content"
                android:background="@color/md_indigo_A200"
                >
                <Button
                    android:id="@+id/bsave"
                    android:layout_width="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_height="40dp"
                    android:textColor="@color/md_blue_50"
                    android:textSize="18dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    style="@style/blabelstyle"
                    android:enabled="false"
                    android:text="@string/save"/>

                <Button
                    android:id="@+id/bclear"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_height="40dp"
                    android:textColor="@color/md_blue_50"
                    android:textSize="18dp"
                    style="@style/blabelstyle"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:enabled="false"
                    android:text="@string/cancel"/>
            </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
